fix styles on mobile

--- a/styles/highlighting.css
+++ b/styles/highlighting.css
@@ -38,6 +38,7 @@ pre code.hljs {
   display: block;
   overflow-x: auto;
   padding: 1em;
+  white-space: pre-wrap;
 }
 
 code.hljs {
@@ -171,4 +172,22 @@ code.hljs {
 /* for v10 compatible themes */
 .hljs-meta-keyword {
   font-weight: bold;
+}
+
+/* Code blocks */
+
+.video-responsive {
+  overflow: hidden;
+  padding-bottom: 56.25%;
+  margin-bottom: 30px;
+  position: relative;
+  height: 0;
+}
+
+.video-responsive iframe {
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  position: absolute;
 }
